tests/linearity-regression/reject/s0902_reserved_02.pdx
// Nested let shadow: deeper nesting of shadowed linear bindings.
module M = structure {
  let f : (linear int) -> unit = fn (x : linear int) -> {
    {
      let x = ();  // shadows x in outer lambda scope; leaks it
      ()
    }
  }
}
